--- a/ProyectoExBD/controller/boton.html
+++ b/ProyectoExBD/controller/boton.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/normalize.css">
+     <link rel="stylesheet" href="../css/boton.css">
+
 </head>
 <body>
+    <div class="boton">
+        <span class="icon"></span>
+        <p>Ingresar</p>
+        
+    </div>
+
     
 </body>
 </html>
